GDBus criticals from GVfs with GLib master
The !454 (merged) change causes the following criticals for gvfs...:
$ G_DEBUG=fatal-criticals jhbuild run gio list localtest:///
(gio list:27811): GLib-GIO-CRITICAL **: 11:48:58.778: g_dbus_connection_signal_subscribe: assertion 'sender == NULL || (g_dbus_is_name (sender) && (connection->flags & G_DBUS_CONNECTION_FLAGS_MESSAGE_BUS_CONNECTION))' failed
Trace/breakpoint trap (core dumped)
...with the following backtrace:
Thread 1 "gio" received signal SIGTRAP, Trace/breakpoint trap.
0x00007ffff7cf21c5 in _g_log_abort (breakpoint=1) at ../../checkout/glib/glib/gmessages.c:554
554 G_BREAKPOINT ();
Missing separate debuginfos, use: dnf debuginfo-install libblkid-2.32.1-1.fc29.x86_64 libffi-3.1-18.fc29.x86_64 libmount-2.32.1-1.fc29.x86_64 libselinux-2.8-4.fc29.x86_64 libuuid-2.32.1-1.fc29.x86_64 pcre-8.42-5.fc29.x86_64 pcre2-10.32-4.fc29.x86_64 zlib-1.2.11-14.fc29.x86_64
(gdb) bt
#0 0x00007ffff7cf21c5 in _g_log_abort (breakpoint=1) at ../../checkout/glib/glib/gmessages.c:554
#1 0x00007ffff7cf33d9 in g_logv (log_domain=0x7ffff7f3f527 "GLib-GIO", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7fffffffc988)
at ../../checkout/glib/glib/gmessages.c:1371
#2 0x00007ffff7cf3592 in g_log (log_domain=log_domain@entry=0x7ffff7f3f527 "GLib-GIO", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL,
format=format@entry=0x7ffff7d40815 "%s: assertion '%s' failed") at ../../checkout/glib/glib/gmessages.c:1413
#3 0x00007ffff7cf3d29 in g_return_if_fail_warning (log_domain=log_domain@entry=0x7ffff7f3f527 "GLib-GIO",
pretty_function=pretty_function@entry=0x7ffff7f64840 <__FUNCTION__.27959> "g_dbus_connection_signal_subscribe",
expression=expression@entry=0x7ffff7f63e00 "sender == NULL || (g_dbus_is_name (sender) && (connection->flags & G_DBUS_CONNECTION_FLAGS_MESSAGE_BUS_CONNECTION))")
at ../../checkout/glib/glib/gmessages.c:2762
#4 0x00007ffff7f05fc3 in g_dbus_connection_signal_subscribe (connection=0x442190, sender=sender@entry=0x7ffff7f3f48a "org.freedesktop.DBus",
interface_name=interface_name@entry=0x7ffff7f3f48a "org.freedesktop.DBus", member=member@entry=0x7ffff7f3f4f9 "NameOwnerChanged",
object_path=object_path@entry=0x7ffff7f565ad "/org/freedesktop/DBus", arg0=0x45a990 ":1.1128", flags=G_DBUS_SIGNAL_FLAGS_NONE,
callback=0x7ffff7f0ea20 <on_name_owner_changed>, user_data=0x451060, user_data_free_func=0x7ffff7f0efb0 <signal_subscription_unref>)
at ../../checkout/glib/gio/gdbusconnection.c:3446
#5 0x00007ffff7f0fedc in async_initable_init_first (initable=<optimized out>) at ../../checkout/glib/gio/gdbusproxy.c:109
#6 0x00007ffff7f1033d in initable_init (initable=0x439600, cancellable=0x0, error=0x7fffffffce08) at ../../checkout/glib/gio/gdbusproxy.c:1935
#7 0x00007ffff7e842d2 in g_initable_new_valist (object_type=<optimized out>, first_property_name=0x7fffea89a478 "g-flags", var_args=0x7fffffffcbb8, cancellable=0x0,
error=0x7fffffffce08) at ../../checkout/glib/gio/ginitable.c:248
#8 0x00007ffff7e8437c in g_initable_new (object_type=<optimized out>, cancellable=cancellable@entry=0x0, error=error@entry=0x7fffffffce08,
first_property_name=first_property_name@entry=0x7fffea89a478 "g-flags") at ../../checkout/glib/gio/ginitable.c:162
#9 0x00007fffea88ef1e in gvfs_dbus_mount_proxy_new_sync (connection=connection@entry=0x442190,
flags=flags@entry=(G_DBUS_PROXY_FLAGS_DO_NOT_LOAD_PROPERTIES | G_DBUS_PROXY_FLAGS_DO_NOT_CONNECT_SIGNALS), name=0x4531c0 ":1.1128",
object_path=0x4536a0 "/org/gtk/vfs/mount/1", cancellable=cancellable@entry=0x0, error=error@entry=0x7fffffffce08) at common/gvfsdbus.c:15083
#10 0x00007fffe9849ee1 in create_proxy_for_file2 (file1=file1@entry=0x7fffdc011c90, file2=file2@entry=0x0, mount_info1_out=mount_info1_out@entry=0x0,
path1_out=path1_out@entry=0x7fffffffcd98, path2_out=path2_out@entry=0x0, connection_out=connection_out@entry=0x7fffffffcda0, cancellable=0x0, error=0x7fffffffce08,
mount_info2_out=0x0) at ../../checkout/gvfs/client/gdaemonfile.c:442
#11 0x00007fffe984acc1 in create_proxy_for_file (error=0x7fffffffce08, cancellable=0x0, connection_out=0x7fffffffcda0, path_out=0x7fffffffcd98, mount_info_out=0x0,
file=0x7fffdc011c90) at ../../checkout/gvfs/client/gdaemonfile.c:675
#12 g_daemon_file_enumerate_children (file=0x7fffdc011c90, attributes=0x4228e0 "standard::name,standard::type,standard::size,standard::is-hidden",
flags=G_FILE_QUERY_INFO_NONE, cancellable=0x0, error=0x7fffffffce08) at ../../checkout/gvfs/client/gdaemonfile.c:675
#13 0x0000000000407d74 in list (file=file@entry=0x7fffdc011c90) at ../../checkout/glib/gio/gio-tool-list.c:116
#14 0x00000000004081ac in handle_list (argc=<optimized out>, argv=<optimized out>, do_help=<optimized out>) at ../../checkout/glib/gio/gio-tool-list.c:212
#15 0x00007ffff7ab8413 in __libc_start_main () from /lib64/libc.so.6
#16 0x000000000040629e in _start () at ../../checkout/glib/gio/gio-tool.c:327
Can somebody with better d-bus knowledges tell me whether this is some old bug in gvfs codes, or the merge request is wrong for some reasons?